# datadotmd

./: .env.example  .gitignore  Dockerfile  README.md  populate_fts.py  pyproject.toml  run.sh
datadotmd/: __init__.py
datadotmd/app/: __init__.py  config.py  main.py  routes.py  templating.py
datadotmd/app/templates/: base.html  browse.html  index.html  search.html
datadotmd/app/templates/htmx/: file_list.html  history.html
datadotmd/database/: models.py  service.py
datadotmd/system/: __init__.py  notifications.py  scanner.py  scheduler.py  slack.py  sync.py
