[project]
name = "datadotmd"
version = "0.1.0"
description = "A web application for browsing and tracking DATA.md files"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.14",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "markdown>=3.5.0",
    "structlog>=24.1.0",
    "schedule>=1.2.0",
    "notifiers",
    "soauth"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datadotmd"]
